--- a/router/Makefile
+++ b/router/Makefile
@@ -1,5 +1,5 @@
 build:
-	vagrant ssh -c 'cd share/router && sudo docker build -t deis/router .'
+	vagrant ssh -c 'cd share/router && sudo docker build -t deisreleases/router-v0.8.0 .'
 
 install:
 	vagrant ssh -c 'sudo systemctl enable /home/core/share/router/systemd/*'
@@ -25,4 +25,4 @@ clean: uninstall
 	vagrant ssh -c 'sudo docker rm -f deis-router'
 
 full-clean: clean
-	vagrant ssh -c 'sudo docker rmi deis/router'
+	vagrant ssh -c 'sudo docker rmi deisreleases/router-v0.8.0'
