--- a/builder/systemd/deis-builder.service
+++ b/builder/systemd/deis-builder.service
@@ -6,10 +6,10 @@ After=deis-controller.service
 [Service]
 EnvironmentFile=/etc/environment
 TimeoutStartSec=20m
-ExecStartPre=/bin/sh -c "/usr/bin/docker history deis/builder >/dev/null || /usr/bin/docker pull deis/builder"
+ExecStartPre=/bin/sh -c "/usr/bin/docker history deisreleases/builder-v0.8.0 >/dev/null || /usr/bin/docker pull deisreleases/builder-v0.8.0"
 ExecStartPre=/bin/sh -c "/usr/bin/docker inspect deis-builder >/dev/null && /usr/bin/docker rm -f deis-builder || true"
 ExecStartPre=/bin/sh -c "/usr/bin/docker start deis-builder-data || /usr/bin/docker run --name deis-builder-data -v /var/lib/docker deis/base /bin/true"
-ExecStart=/bin/sh -c "docker run --name deis-builder -p 2222:22 -e PUBLISH=22 -e HOST=$COREOS_PRIVATE_IPV4 -e PORT=2222 --volumes-from deis-builder-data --privileged deis/builder"
+ExecStart=/bin/sh -c "docker run --name deis-builder -p 2222:22 -e PUBLISH=22 -e HOST=$COREOS_PRIVATE_IPV4 -e PORT=2222 --volumes-from deis-builder-data --privileged deisreleases/builder-v0.8.0"
 ExecStartPost=/bin/sh -c "echo 'Waiting for builder on 2222/tcp...' && until cat </dev/null>/dev/tcp/$COREOS_PRIVATE_IPV4/2222; do sleep 1; done"
 ExecStop=/usr/bin/docker rm -f deis-builder
 
