feat(controller): hook up domains to router

--- a/router/templates/nginx.conf
+++ b/router/templates/nginx.conf
@@ -51,7 +51,7 @@ http {
     }
 
     server {
-        server_name ~^{{ Base $service.Key }}\.(?<domain>.+)$;
+        server_name ~^{{ Base $service.Key }}\.(?<domain>.+)${{ range $domains := .deis_domains }}{{range $app_domains := $domains.Nodes }}{{ if eq (Base $service.Key) (Base $app_domains) }} {{ $app_domains.Value }}{{ end }}{{ end }}{{ end }};
 
         server_name_in_redirect off;
         port_in_redirect off;
