feat(router): configurable gzip settings
Fixes #884

--- a/router/conf.d/nginx.conf.toml
+++ b/router/conf.d/nginx.conf.toml
@@ -6,6 +6,7 @@ gid = 0
 mode  = "0644"
 keys = [
   "/deis/services",
+  "/deis/router"
 ]
 #check_cmd  = "/usr/sbin/nginx -t -c {{ .src }}"
 reload_cmd = "/usr/sbin/nginx -s reload"
