--- a/router/templates/nginx.conf
+++ b/router/templates/nginx.conf
@@ -6,28 +6,35 @@ worker_processes 4;
 pid /run/nginx.pid;
 
 events {
-	worker_connections 768;
-	# multi_accept on;
+    worker_connections 768;
+    # multi_accept on;
 }
 
 http {
     # basic settings
-	sendfile on;
-	tcp_nopush on;
-	tcp_nodelay on;
-	keepalive_timeout 65;
-	types_hash_max_size 2048;
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
     server_names_hash_bucket_size 64;
-	gzip on;
-	gzip_disable "msie6";
 
     include /etc/nginx/mime.types;
-	default_type application/octet-stream;
+    default_type application/octet-stream;
+
+    {{ if .deis_router_gzip }}
+    gzip {{ .deis_router_gzip }};
+    gzip_comp_level {{ .deis_router_gzipCompLevel }};
+    gzip_disable {{ .deis_router_gzipDisable }};
+    gzip_http_version {{ .deis_router_gzipHttpVersion }};
+    gzip_types {{ .deis_router_gzipTypes }};
+    gzip_proxied {{ .deis_router_gzipProxied }};
+    gzip_vary {{ .deis_router_gzipVary }};
+    {{ end }}
 
     # send logs to STDOUT so they can be seen using 'docker logs'
     access_log /dev/stdout;
     error_log /dev/stdout;
-
 
     server {
         listen 80 default_server;
