fix(router): restore check_cmd and grep nginx.conf
We were having issues with router coming up due to "<no value>"
being templated into /etc/nginx/nginx.conf. Thanks @gabrtv.

--- a/router/conf.d/nginx.conf.toml
+++ b/router/conf.d/nginx.conf.toml
@@ -10,5 +10,5 @@ keys = [
   "/deis/domains",
   "/deis/controller",
 ]
-#check_cmd  = "/usr/sbin/nginx -t -c {{ .src }}"
+check_cmd  = "/usr/sbin/nginx -t -c {{ .src }}"
 reload_cmd = "/usr/sbin/nginx -s reload"
