--- a/router/conf.d/nginx.conf.toml
+++ b/router/conf.d/nginx.conf.toml
@@ -9,6 +9,7 @@ keys = [
   "/deis/router",
   "/deis/domains",
   "/deis/controller",
+  "/deis/builder",
 ]
 check_cmd  = "/usr/sbin/nginx -t -c {{ .src }}"
 reload_cmd = "/usr/sbin/nginx -s reload"
