--- a/router/templates/nginx.conf
+++ b/router/templates/nginx.conf
@@ -49,9 +49,9 @@ http {
             proxy_set_header            Host $host;
             proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_redirect              off;
-            proxy_connect_timeout       10;
-            proxy_send_timeout          30;
-            proxy_read_timeout          30;
+            proxy_connect_timeout       10s;
+            proxy_send_timeout          30s;
+            proxy_read_timeout          30s;
 
             proxy_pass                  http://deis-controller;
         }
@@ -75,12 +75,33 @@ http {
             proxy_set_header            Host $host;
             proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_redirect              off;
-            proxy_connect_timeout       10;
-            proxy_send_timeout          30;
-            proxy_read_timeout          30;
+            proxy_connect_timeout       10s;
+            proxy_send_timeout          30s;
+            proxy_read_timeout          30s;
 
             proxy_pass                  http://{{ Base $service.Key }};
         }
     }
     {{ end }}{{ end }}
 }
+
+tcp {
+    access_log /dev/stdout;
+    tcp_nodelay on;
+    timeout 30000;
+
+    # same directive names, but these are in miliseconds...
+    proxy_connect_timeout       10000;
+    proxy_send_timeout          30000;
+    proxy_read_timeout          30000;
+
+    upstream builder {
+        server {{ .deis_builder_host }}:{{ .deis_builder_port }};
+    }
+
+    server {
+        listen 2222;
+        proxy_pass builder;
+    }
+}
+
