--- a/registry/templates/config.yml
+++ b/registry/templates/config.yml
@@ -33,8 +33,9 @@ prod:
     s3_secret_key: {{ .deis_registry_s3secretKey }}
     s3_region: {{ .deis_registry_s3region }}
     s3_bucket: {{ .deis_registry_s3bucket }}
-    s3_encrypt: {{ .deis_registry_s3encrypt }}
-    s3_secure: {{ .deis_registry_s3secure }}
+    boto_bucket: {{ .deis_registry_s3bucket }}
+    s3_encrypt: bool({{ .deis_registry_s3encrypt }})
+    s3_secure: bool({{ .deis_registry_s3secure }})
     storage_redirect: True
     # Enabling query cache on Redis
     cache:
