--- a/router/systemd/deis-router.service
+++ b/router/systemd/deis-router.service
@@ -4,7 +4,7 @@ Description=deis-router
 [Service]
 EnvironmentFile=/etc/environment
 TimeoutStartSec=20m
-ExecStartPre=/bin/sh -c "docker history deis/router >/dev/null || docker pull deis/router:latest"
+ExecStartPre=/bin/sh -c "docker history deis/router >/dev/null || docker pull deis/router:v0.9.0"
 ExecStartPre=/bin/sh -c "docker inspect deis-router >/dev/null && docker rm -f deis-router || true"
 ExecStart=/usr/bin/docker run --name deis-router -p 80:80 -p 2222:2222 -e PUBLISH=80 -e HOST=${COREOS_PRIVATE_IPV4} deis/router
 ExecStop=/usr/bin/docker rm -f deis-router
