--- a/database/systemd/deis-database.service
+++ b/database/systemd/deis-database.service
@@ -4,10 +4,10 @@ Description=deis-database
 [Service]
 EnvironmentFile=/etc/environment
 TimeoutStartSec=20m
-ExecStartPre=/bin/sh -c "docker history deis/database >/dev/null || docker pull deis/database:v0.9.1"
+ExecStartPre=/bin/sh -c "docker history deis/database:v0.9.1 >/dev/null || docker pull deis/database:v0.9.1"
 ExecStartPre=/bin/sh -c "docker inspect deis-database >/dev/null && docker rm -f deis-database || true"
 ExecStartPre=/bin/sh -c "docker inspect deis-database-data >/dev/null 2>&1 || docker run --name deis-database-data -v /var/lib/postgresql deis/base true"
-ExecStart=/usr/bin/docker run --name deis-database -p 5432:5432 -e PUBLISH=5432 -e HOST=${COREOS_PRIVATE_IPV4} --volumes-from deis-database-data deis/database
+ExecStart=/usr/bin/docker run --name deis-database -p 5432:5432 -e PUBLISH=5432 -e HOST=${COREOS_PRIVATE_IPV4} --volumes-from deis-database-data deis/database:v0.9.1
 ExecStop=/usr/bin/docker rm -f deis-database
 
 [Install]
