--- a/router/systemd/deis-router.service
+++ b/router/systemd/deis-router.service
@@ -4,9 +4,9 @@ Description=deis-router
 [Service]
 EnvironmentFile=/etc/environment
 TimeoutStartSec=20m
-ExecStartPre=/bin/sh -c "docker history deis/router >/dev/null || docker pull deis/router:v0.9.1"
+ExecStartPre=/bin/sh -c "docker history deis/router:v0.9.1 >/dev/null || docker pull deis/router:v0.9.1"
 ExecStartPre=/bin/sh -c "docker inspect deis-router >/dev/null && docker rm -f deis-router || true"
-ExecStart=/usr/bin/docker run --name deis-router -p 80:80 -p 2222:2222 -e PUBLISH=80 -e HOST=${COREOS_PRIVATE_IPV4} deis/router
+ExecStart=/usr/bin/docker run --name deis-router -p 80:80 -p 2222:2222 -e PUBLISH=80 -e HOST=${COREOS_PRIVATE_IPV4} deis/router:v0.9.1
 ExecStop=/usr/bin/docker rm -f deis-router
 
 [Install]
