--- a/builder/Makefile
+++ b/builder/Makefile
@@ -26,3 +26,11 @@ clean: uninstall
 
 full-clean: clean
 	$(call ssh_all,'sudo docker rmi deis/builder')
+
+test: test-unit test-functional
+
+test-unit:
+	@echo no unit tests
+
+test-functional:
+	@echo no functional tests
