--- a/logger/Makefile
+++ b/logger/Makefile
@@ -26,3 +26,11 @@ clean: uninstall
 
 full-clean: clean
 	$(call ssh_all,'sudo docker rmi deis/logger')
+
+test: test-unit test-functional
+
+test-unit:
+	@echo no unit tests
+
+test-functional:
+	go test -v ./...
