docs(*): refactor and reorganize
Reorganize the docs to make more sense for users.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -31,6 +31,9 @@ dirhtml:
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/dirhtml."
 
+auto: dirhtml
+	sphinx-autobuild -b dirhtml $(ALLSPHINXOPTS) $(BUILDDIR)/dirhtml
+
 help:
 	@echo "Please use \`make <target>' where <target> is one of"
 	@echo "  html       to make standalone HTML files"
