--- a/logger/Makefile
+++ b/logger/Makefile
@@ -33,4 +33,4 @@ test-unit:
 	@echo no unit tests
 
 test-functional:
-	go test -v ./...
+	GOPATH=$(CURDIR)/../tests/_vendor:$(GOPATH) go test -v ./test/...
