feat(registry): Configurable storage backends
Refactored the deis-registry configuration template to
make the storage backend configurable via etcd

Fixes #1119

Also start deis-cache before starting deis-registry and grant
deis-registry access to the /deis/cache etcd key space

Fixes #1120

--- a/registry/Dockerfile
+++ b/registry/Dockerfile
@@ -29,7 +29,7 @@ RUN pip install /docker-registry/depends/docker-registry-core
 RUN pip install file:///docker-registry#egg=docker-registry[bugsnag]
 
 ENV DOCKER_REGISTRY_CONFIG /docker-registry/config/config.yml
-ENV SETTINGS_FLAVOR dev
+ENV SETTINGS_FLAVOR deis
 
 # create data volume
 RUN mkdir -p /data/repositories && chown -R registry:registry /data
