--- a/registry/conf.d/config.toml
+++ b/registry/conf.d/config.toml
@@ -5,7 +5,8 @@ uid = 0
 gid = 0
 mode  = "0644"
 keys = [
-  "/deis/registry",
+  "/deis/cache",
+  "/deis/registry"
 ]
 check_cmd = "/app/bin/check {{ .src }}"
 reload_cmd = "/app/bin/reload"
