feat(Makefile): move rsync from Vagrantfile to Makefile
Moves rsync from the Vagrantfile to the Makefile, enabling
development to occur on non-local Deis deployments (EC2, Rackspace,
etc.).

TESTING: ensure `make build` works the same way, both for the
main Makefile and the individual component Makefiles. To test for
a remote deployment:

```console
$ DEIS_HOSTS="54.12.21.12 54.13.11.4 55.61.2.4" make build
```

You can also test the `make rsync` target directly.

closes #1020

--- a/builder/Makefile
+++ b/builder/Makefile
@@ -1,6 +1,7 @@
 include ../includes.mk
 
 build:
+	$(call rsync_all)
 	$(call ssh_all,'cd share/builder && docker build -t deis/builder .')
 
 install: check-fleet
