--- a/registry/Makefile
+++ b/registry/Makefile
@@ -41,6 +41,6 @@ test-unit:
 		../venv/bin/python -m unittest discover -s test
 
 test-functional:
-	GOPATH=$(CURDIR)/../tests/_vendor:$(GOPATH) go test -timeout 7m -v ./tests/...
+	GOPATH=$(CURDIR)/../tests/_vendor:$(GOPATH) go test -v ./tests/...
 
 .PHONY: test
