chore(router): Use unit file templates
Use unit file templates instead of copy and submit

--- a/router/systemd/deis-router@.service
+++ b/router/systemd/deis-router@.service
@@ -13,4 +13,4 @@ ExecStopPost=/usr/bin/docker stop deis-router
 WantedBy=multi-user.target
 
 [X-Fleet]
-X-Conflicts=deis-router.*.service
+X-Conflicts=deis-router@*.service
