--- a/registry/Makefile
+++ b/registry/Makefile
@@ -41,4 +41,4 @@ test-unit:
 		../venv/bin/python -m unittest discover -s test
 
 test-functional:
-	GOPATH=$(CURDIR)/../tests/_vendor:$(GOPATH) go test -v ./tests/...
+	GOPATH=$(CURDIR)/../tests/_vendor:$(GOPATH) go test -v -timeout 20m ./tests/...
