chore(coreos): upgrade to 379.3.0
This also bumps Docker to 1.1.1.

Note that this also changes the device names for EC2
and DigitalOcean, as CoreOS changed these as of 379.0.0.

--- a/contrib/digitalocean/cloud-config.yml
+++ b/contrib/digitalocean/cloud-config.yml
@@ -15,7 +15,7 @@ coreos:
     - name: public.network
       content: |
         [Match]
-        Name=ens3
+        Name=eth0
 
         [Network]
         Address=PUBLIC_IP
