--- a/router/templates/nginx.conf
+++ b/router/templates/nginx.conf
@@ -81,6 +81,8 @@ http {
             proxy_send_timeout          1200s;
             proxy_read_timeout          1200s;
 
+            proxy_next_upstream         error timeout http_502 http_503 http_504;
+
             add_header                  X-Deis-Upstream $upstream_addr;
 
             proxy_pass                  http://{{ Base $service.Key }};
