--- a/registry/Dockerfile
+++ b/registry/Dockerfile
@@ -1,5 +1,5 @@
 FROM deis/base:latest
-MAINTAINER Gabriel Monroy <gabriel@opdemand.com>
+MAINTAINER OpDemand <info@opdemand.com>
 
 # install required packages (copied from dotcloud/docker-registry Dockerfile)
 RUN sed -i 's/main$/main universe/' /etc/apt/sources.list
