feat(*): add `make test-style` targets
This gives us an opporunity to run code checkers and linters as part
of testing, as we used to on travis-ci.org. By default, unit tests
will check code syntax and style first.

--- a/client/Makefile
+++ b/client/Makefile
@@ -13,3 +13,10 @@ clean:
 
 client:
 	pyinstaller deis.spec
+
+setup-venv:
+	@if [ ! -d venv ]; then virtualenv venv; fi
+	venv/bin/pip install -q flake8==2.2.2
+
+test-style: setup-venv
+	venv/bin/flake8
