fix(contrib/digitalocean): update network interface to eth1

--- a/contrib/digitalocean/cloud-config.yml
+++ b/contrib/digitalocean/cloud-config.yml
@@ -25,7 +25,7 @@ coreos:
     - name: private.network
       content: |
         [Match]
-        Name=ens4v1
+        Name=eth1
 
         [Network]
         Address=PRIVATE_IP
