refactor(makefile): remove fleet, switch to deisctl and custom images

--- a/builder/Makefile
+++ b/builder/Makefile
@@ -1,31 +1,38 @@
 include ../includes.mk
 
-build:
-	$(call rsync_all)
-	$(call ssh_all,'cd share/builder && docker build -t deis/builder .')
+build: check-docker
+	docker build -t deis/builder:$(GIT_TAG) .
 
-install: check-fleet
-	$(FLEETCTL) load systemd/*
+push: check-docker check-registry check-deisctl
+	docker tag deis/builder:$(GIT_TAG) $(REGISTRY)/deis/builder:$(GIT_TAG)
+	docker push $(REGISTRY)/deis/builder:$(GIT_TAG)
+	deisctl config builder set image=$$DEIS_REGISTRY/deis/builder:$(GIT_TAG)
 
-uninstall: check-fleet stop
-	$(FLEETCTL) unload systemd/*
-	$(FLEETCTL) destroy systemd/*
+clean: check-docker check-registry
+	docker rmi deis/builder:$(GIT_TAG)
+	docker rmi $(REGISTRY)/deis/builder:$(GIT_TAG)
 
-start: check-fleet
-	$(FLEETCTL) start -no-block systemd/*
+full-clean: check-docker check-registry
+	docker images -q deis/builder | xargs docker rmi -f
+	docker images -q $(REGISTRY)/deis/builder | xargs docker rmi -f
 
-stop: check-fleet
-	$(FLEETCTL) stop -block-attempts=600 systemd/*
+install: check-deisctl
+	deisctl install builder-data
+	deisctl scale builder=1
+
+uninstall: check-deisctl
+	deisctl scale builder=0
+	deisctl uninstall builder-data
+
+start: check-deisctl
+	deisctl start builder
+
+stop: check-deisctl
+	deisctl stop builder
 
 restart: stop start
 
 run: install start
-
-clean: uninstall
-	$(call ssh_all,'sudo docker rm -f deis-builder')
-
-full-clean: clean
-	$(call ssh_all,'sudo docker rmi deis/builder')
 
 test: test-unit test-functional
 
