--- a/router/Makefile
+++ b/router/Makefile
@@ -1,47 +1,36 @@
 include ../includes.mk
 
-build:
-	$(call rsync_all)
-	$(call ssh_all,'cd share/router && sudo docker build -t deis/router .')
+build: check-docker
+	docker build -t deis/router:$(GIT_TAG) .
 
-install: check-fleet
-	@$(foreach R, $(ROUTER_UNITS), \
-		cp systemd/deis-router.service ./$(R) ; \
-		$(FLEETCTL) load ./$(R) ; \
-		rm -f ./$(R) ; \
-	)
+push: check-docker check-registry check-deisctl
+	docker tag deis/router:$(GIT_TAG) $(REGISTRY)/deis/router:$(GIT_TAG)
+	docker push $(REGISTRY)/deis/router:$(GIT_TAG)
+	deisctl config router set image=$$DEIS_REGISTRY/deis/router:$(GIT_TAG)
 
-uninstall: check-fleet stop
-	@$(foreach R, $(ROUTER_UNITS), \
-		cp systemd/deis-router.service ./$(R) ; \
-		$(FLEETCTL) unload ./$(R) ; \
-		$(FLEETCTL) destroy ./$(R) ; \
-		rm -f ./$(R) ; \
-	)
+clean: check-docker check-registry
+	docker rmi deis/router:$(GIT_TAG)
+	docker rmi $(REGISTRY)/deis/router:$(GIT_TAG)
 
-start: check-fleet
-	@$(foreach R, $(ROUTER_UNITS), \
-		cp systemd/deis-router.service ./$(R) ; \
-		$(FLEETCTL) start -no-block ./$(R) ; \
-		rm -f ./$(R) ; \
-	)
+full-clean: check-docker check-registry
+	docker images -q deis/router | xargs docker rmi -f
+	docker images -q $(REGISTRY)/deis/router | xargs docker rmi -f
 
-stop: check-fleet
-	@$(foreach R, $(ROUTER_UNITS), \
-		cp systemd/deis-router.service ./$(R) ; \
-		$(FLEETCTL) stop -block-attempts=600 ./$(R) ; \
-		rm -f ./$(R) ; \
-	)
+install: check-deisctl
+	deisctl scale router=1
+
+uninstall: check-deisctl
+	deisctl scale router=0
+
+start: check-deisctl
+	deisctl start router
+
+stop: check-deisctl
+	deisctl stop router
 
 restart: stop start
 
 run: install start
-
-clean: uninstall
-	$(call ssh_all,'sudo docker rm -f deis-router')
-
-full-clean: clean
-	$(call ssh_all,'sudo docker rmi deis/router')
 
 test: test-unit test-functional
 
