--- a/router/templates/nginx.conf
+++ b/router/templates/nginx.conf
@@ -67,6 +67,31 @@ http {
     }{{ end }}
     ## end deis-controller
 
+    ## start deis-store-gateway
+    {{ if .deis_store_gateway_host }}
+    upstream deis-store-gateway {
+        server {{ .deis_store_gateway_host }}:{{ .deis_store_gateway_port }};
+    }
+
+    server {
+        server_name ~^store\.(?<domain>.+)$;
+        server_name_in_redirect off;
+        port_in_redirect off;
+
+        location / {
+            proxy_buffering             off;
+            proxy_set_header            Host $host;
+            proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_redirect              off;
+            proxy_connect_timeout       10s;
+            proxy_send_timeout          1200s;
+            proxy_read_timeout          1200s;
+
+            proxy_pass                  http://deis-store-gateway;
+        }
+    }{{ end }}
+    ## end deis-store-gateway
+
     ## start service definitions for each application
     {{ $domains := .deis_domains }}{{ range $service := .deis_services }}{{ if $service.Nodes }}
     upstream {{ Base $service.Key }} {
