fix(logger): properly parse incoming syslog messages

--- a/logger/Dockerfile
+++ b/logger/Dockerfile
@@ -1,6 +1,13 @@
 FROM deis/base:latest
 MAINTAINER OpDemand <info@opdemand.com>
 
+# install go dependencies
+RUN apt-get update && apt-get install -yq \
+    git \
+    bzr \
+    mercurial \
+    --no-install-recommends
+
 # install go runtime
 RUN wget -qO- https://storage.googleapis.com/golang/go1.3.1.linux-amd64.tar.gz | tar -C /usr/local -xz
 
@@ -13,12 +20,13 @@ ENV PATH /usr/local/bin:/usr/bin:/bin:/sbin:/usr/local/go/bin
 RUN mkdir -p /var/log/deis
 
 # prepare execution environment
-WORKDIR /app
+WORKDIR /go/src/github.com/deis/deis/logger
 CMD ["/app/bin/boot"]
 EXPOSE 514
 
-ADD . /app
+ADD bin/ /app/bin/
 ADD . /go/src/github.com/deis/deis/logger
 
-# compile the binary
-RUN cd /go/src/github.com/deis/deis/logger/syslogd && go install -v .
+# install dependencies
+RUN go get ./syslog
+RUN go install -v ./syslogd
