feat(router): custom request size.

--- a/router/templates/nginx.conf
+++ b/router/templates/nginx.conf
@@ -29,6 +29,8 @@ http {
     gzip_types {{ .deis_router_gzipTypes }};
     gzip_proxied {{ .deis_router_gzipProxied }};
     gzip_vary {{ .deis_router_gzipVary }};{{ end }}
+    
+    client_max_body_size {{ or (.deis_router_bodySize) "1m" }};
 
     # send logs to STDOUT so they can be seen using 'docker logs'
     access_log /dev/stdout;
