chore(units): remove deprecated X-Condition from fleet units
See https://github.com/coreos/fleet/blob/19f64d1cec755d6eb01159830e0802b5225d12c8/job/job.go#L23-L37

--- a/units/deis-controller.service
+++ b/units/deis-controller.service
@@ -16,4 +16,4 @@ ExecStopPost=/usr/bin/docker stop deis-controller
 WantedBy=multi-user.target
 
 [X-Fleet]
-X-ConditionMachineOf=deis-logger@1.service
+MachineOf=deis-logger@1.service
