ref(Makefiles): use $BUILD_TAG, which defaults to "git rev-parse"

--- a/registry/Makefile
+++ b/registry/Makefile
@@ -1,16 +1,16 @@
 include ../includes.mk
 
 build: check-docker
-	docker build -t deis/registry:$(GIT_TAG) .
+	docker build -t deis/registry:$(BUILD_TAG) .
 
 push: check-docker check-registry check-deisctl
-	docker tag deis/registry:$(GIT_TAG) $(REGISTRY)/deis/registry:$(GIT_TAG)
-	docker push $(REGISTRY)/deis/registry:$(GIT_TAG)
-	deisctl config registry set image=$$DEIS_REGISTRY/deis/registry:$(GIT_TAG)
+	docker tag deis/registry:$(BUILD_TAG) $(REGISTRY)/deis/registry:$(BUILD_TAG)
+	docker push $(REGISTRY)/deis/registry:$(BUILD_TAG)
+	deisctl config registry set image=$(REGISTRY)/deis/registry:$(BUILD_TAG)
 
 clean: check-docker check-registry
-	docker rmi deis/registry:$(GIT_TAG)
-	docker rmi $(REGISTRY)/deis/registry:$(GIT_TAG)
+	docker rmi deis/registry:$(BUILD_TAG)
+	docker rmi $(REGISTRY)/deis/registry:$(BUILD_TAG)
 
 full-clean: check-docker check-registry
 	docker images -q deis/registry | xargs docker rmi -f
