fix(user-data): add fixed version of sed command to "make discovery-url"

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,7 @@ contrib/ec2/cloudformation.json
 
 # GCE generated user-data
 contrib/gce/gce-user-data
+
+# user-data backup file
+contrib/coreos/user-data.orig
+
