ref(builder): replace python with bash
Debugging the builder script when it fails is really difficult in
python. You have to import a bunch of libraries, pipe stderr on some
commands to stdout, inspect the return codes and the error returned...
In short, it's quite difficult to debug. Refactoring to bash allows us
to debug the script quite easily by setting the -x option for bash
scripts and we have instant debugging.

This refactor also removes the "remote:" prefix from most of the
output, which is another huge plus.

--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -23,6 +23,9 @@ RUN apt-get update && apt-get install -yq \
     aufs-tools iptables lxc \
     lxc-docker-1.2.0
 
+# install jq for parsing json
+RUN curl http://stedolan.github.io/jq/download/linux64/jq > /usr/bin/jq && chmod 755 /usr/bin/jq
+
 # configure ssh server
 RUN rm /etc/ssh/ssh_host_*
 RUN dpkg-reconfigure openssh-server
@@ -60,9 +63,9 @@ WORKDIR /app
 ENTRYPOINT ["/app/bin/entry"]
 CMD ["/app/bin/boot"]
 EXPOSE 22
-
 RUN addgroup --quiet --gid 2000 slug && useradd slug --uid=2000 --gid=2000
 
+ADD templates/shim.dockerfile /home/git/
 ADD . /app
 ADD sshd_config /etc/ssh/sshd_config
 RUN chown -R root:root /app
