ref(builder): use ubuntu:14.04 as Dockerfile base image

--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -1,14 +1,26 @@
-FROM deis/base:latest
-MAINTAINER OpDemand <info@opdemand.com>
+FROM ubuntu:14.04
+
+ENV DEBIAN_FRONTEND noninteractive
+
+# install common packages
+RUN apt-get update && apt-get install -y curl
+
+# install etcdctl
+RUN curl -sSL -o /usr/local/bin/etcdctl https://s3-us-west-2.amazonaws.com/opdemand/etcdctl-v0.4.6 \
+    && chmod +x /usr/local/bin/etcdctl
+
+# install confd
+RUN curl -sSL -o /usr/local/bin/confd https://s3-us-west-2.amazonaws.com/opdemand/confd-v0.5.0-json \
+    && chmod +x /usr/local/bin/confd
 
 # install docker-in-docker
 RUN echo "deb http://get.docker.io/ubuntu docker main" > /etc/apt/sources.list.d/docker.list
 RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 36A1D7869245C8950F966E92D8576A8BA88D21E9
+
 # install builder, docker, and hook dependencies
 RUN apt-get update && apt-get install -yq \
     openssh-server git \
     aufs-tools iptables lxc \
-    curl \
     lxc-docker-1.2.0
 
 # configure ssh server
@@ -16,11 +28,11 @@ RUN rm /etc/ssh/ssh_host_*
 RUN dpkg-reconfigure openssh-server
 RUN mkdir -p /var/run/sshd
 
-# install recent pip
-RUN wget -qO- https://raw.githubusercontent.com/pypa/pip/1.5.5/contrib/get-pip.py | python -
+# install pip
+RUN curl -sSL https://raw.githubusercontent.com/pypa/pip/1.5.5/contrib/get-pip.py | python -
 
 # install hook dependencies
-RUN pip install pyyaml requests
+RUN pip install pyyaml==3.11 requests==2.4.1
 
 # install all i18n locales
 RUN ln -s /usr/share/i18n/SUPPORTED /var/lib/locales/supported.d/all && locale-gen
@@ -37,8 +49,8 @@ RUN echo "%git    ALL=(ALL:ALL) NOPASSWD:/home/git/builder" >> /etc/sudoers
 
 # HACK: import progrium/cedarish as a tarball
 # see https://github.com/deis/deis/issues/1027
-RUN wget -O /progrium_cedarish.tar --progress=dot:giga \
-        https://s3-us-west-2.amazonaws.com/opdemand/progrium_cedarish_cedar.tar
+RUN curl -#SL -o /progrium_cedarish.tar \
+    https://s3-us-west-2.amazonaws.com/opdemand/progrium_cedarish_cedar.tar
 
 # define the execution environment
 VOLUME /var/lib/docker
