fix(units): show start-pre status when downloading data container base

--- a/units/deis-logger-data.service
+++ b/units/deis-logger-data.service
@@ -4,7 +4,8 @@ Description=deis-logger-data
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/bin/sh -c "docker inspect deis-logger-data >/dev/null 2>&1 || docker run --name deis-logger-data -v /var/log/deis deis/base true"
+ExecStartPre=/bin/sh -c "docker history deis/base:latest >/dev/null 2>&1 || docker pull deis/base:latest"
+ExecStart=/bin/sh -c "docker inspect deis-logger-data >/dev/null 2>&1 || docker run --name deis-logger-data -v /var/log/deis deis/base:latest true"
 
 [Install]
 WantedBy=multi-user.target
