--- a/units/deis-database-data.service
+++ b/units/deis-database-data.service
@@ -4,7 +4,8 @@ Description=deis-database-data
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/bin/sh -c "docker inspect deis-database-data >/dev/null 2>&1 || docker run --name deis-database-data -v /var/lib/postgresql deis/base true"
+ExecStartPre=/bin/sh -c "docker history deis/base:latest >/dev/null 2>&1 || docker pull deis/base:latest"
+ExecStart=/bin/sh -c "docker inspect deis-database-data >/dev/null 2>&1 || docker run --name deis-database-data -v /var/lib/postgresql deis/base:latest true"
 
 [Install]
 WantedBy=multi-user.target
