feat(deisctl): add store support; drop database-data and registry-data
ref(deisctl): convert store to use global units

--- a/store/Makefile
+++ b/store/Makefile
@@ -42,32 +42,24 @@ full-clean: check-docker check-registry
 	)
 
 install: check-deisctl
-	deisctl scale store-monitor=3
-	deisctl scale store-daemon=3
+	deisctl install store-monitor
+	deisctl install store-daemon
 	deisctl scale store-gateway=1
 
 uninstall: check-deisctl
 	deisctl scale store-gateway=0
-	deisctl scale store-daemon=0
-	deisctl scale store-monitor=0
+	deisctl uninstall store-daemon
+	deisctl uninstall store-monitor
 
 start: check-deisctl
-	deisctl start store-monitor@1
-	deisctl start store-monitor@2
-	deisctl start store-monitor@3
-	deisctl start store-daemon@1
-	deisctl start store-daemon@2
-	deisctl start store-daemon@3
+	deisctl start store-monitor
+	deisctl start store-daemon
 	deisctl start store-gateway@1
 
 stop: check-deisctl
 	deisctl stop store-gateway@1
-	deisctl stop store-daemon@1
-	deisctl stop store-daemon@2
-	deisctl stop store-daemon@3
-	deisctl stop store-monitor@1
-	deisctl stop store-monitor@2
-	deisctl stop store-monitor@3
+	deisctl stop store-daemon
+	deisctl stop store-monitor
 
 restart: stop start
 
